; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_videohandler.c_ghb_video_setting_changed.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_videohandler.c_ghb_video_setting_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_video_setting_changed(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %4, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @ghb_widget_to_setting(i32 %7, i32* %8)
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %11 = call i32 @update_adv_settings_tooltip(%struct.TYPE_6__* %10)
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @ghb_check_dependency(%struct.TYPE_6__* %12, i32* %13, i32* null)
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %16 = call i32 @ghb_clear_presets_selection(%struct.TYPE_6__* %15)
  ret void
}

declare dso_local i32 @ghb_widget_to_setting(i32, i32*) #1

declare dso_local i32 @update_adv_settings_tooltip(%struct.TYPE_6__*) #1

declare dso_local i32 @ghb_check_dependency(%struct.TYPE_6__*, i32*, i32*) #1

declare dso_local i32 @ghb_clear_presets_selection(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
